assets/sass/layouts/_footer.scss
footer {
  	position: relative;
	float: left;
	margin: auto;
  	margin-top: -60px;
	padding: 0px;
	width: 100%;
  	z-index: 1;

  	.footer-floats {
	  @include clearfix;
	}

	.site-info {
	  	color: $bc-blue;
		//background: $bc-lightblue;
	    background: transparent;
	    margin: auto;
		width: 100%;
        text-align: center;
        font-size: 1.3em;
        padding-top: 20px;
		// Converting to ul/li....
        //h3 {
        //  font-size: 1.3em;
        //}
        //p {
        //  font-family: $opensans-condensed;
        //}
	  	a,a:link,a:hover,a:visited {
		  color: $bc-blue;
		}
	  	ul {
		  margin: 0;
		  padding: 0;
		  li {
			list-style-type: none;
			display: inline;
		  }
		}
	  	.site-info-school li {
		  font-size: 1.3em;
		  font-weight: bold;
		}
		.site-info-school li:before {
		  content: " | ";
		}
		.site-info-school li:first-child:before {
		  content: none;
		}
	  	.site-info-links li {
		  font-family: $opensans-condensed;
		}
		.site-info-links li:before {
		  content: " | ";
		}
		.site-info-links li:first-child:before {
		  content: none;
		}


	}
	.footer-left {
		@include span-columns(6);
		margin-top: 30px;
		margin-bottom: 40px;
		padding: 10px;
		text-align: left;
	}
	.footer-right {
		@include span-columns(6);
		margin-top: 30px;
		margin-bottom: 40px;
		padding: 10px;
		text-align: right;
	}
	.footer-main {
		@include clearfix;
		color: $bc-white;
		background: $bc-blue;
        padding: 20px;
	  	padding-top: 100px;
        h3 {
          text-align: center;
          font-size: 1.3em;
        }
	}
	.footer-promise {

	  width: 100%;
	  @include MQ(M) {
		display: block;
		float: left;
		width: 25%;
		padding: 5px;
	  }

	}
	.footer-about {

		display: none;

	  	@include MQ(S) {
		  	display: block;
		  	float: left;
			width: 25%;
        	padding: 5px;
		}

	}
	.footer-distinctly {
	  display: none;

	  @include MQ(S) {
		display: block;
		float: left;
		width: 25%;
		padding: 5px;
	  }

	}

	.footer-maps {
	  width: 300px;
	  margin-top: 0px;
	  margin-right: auto;
	  margin-bottom: 20px;
	  margin-left: auto;
	  text-align: center;

	  @include MQ(S) {
		display: block;
		float: left;
		width: 25%;
		padding: 5px;
		margin: 0px;
	  }

	  #gmap_container {
		overflow: hidden;

		#gmap_canvas {

		  img {
			max-width: none !important;
			background: none !important;
		  }

		  @include MQ(M) {
			height: 210px;
			width: 210px;
		  }
		}
	  }

	  #gmap_links {
		margin-top: 20px;
		margin-bottom: 20px;
		font-weight: 700;
	  }

	}


	.footer-more {
	  width: 300px;
	  margin-top: 1em;
	  margin-right: auto;
	  margin-bottom: 1em;
	  margin-left: auto;
	  background: $bc-white;
	  border-radius: 10px;
	  color: $bc-orange;
	  display: block;
	  font-size: 1.75em;
	  font-weight: 700;
	  letter-spacing: -1px;
	  padding: 1em;
	  text-align: center;
	  text-transform: uppercase;
	  a {
		color: $bc-orange;
	  }
	}


	.footer-social {
		clear: left;
		color: $bc-white;
		background: $bc-orange;
		text-align: center;
        padding: 20px;
        font-size: 1.3em;
        font-weight: bold;

	}

}

